[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/planets/planet.png" type="Texture" id=1]
[ext_resource path="res://ball.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 32.7954

[node name="RigidBody2D" type="RigidBody2D"]
collision_layer = 2
collision_mask = 2147483652
mass = 2.5
contacts_reported = 2
contact_monitor = true
can_sleep = false
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.561249, 0.561234 )
texture = ExtResource( 1 )
hframes = 2
vframes = 5
frame = 9

[node name="ball_hurtbox" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ball_hurtbox"]
shape = SubResource( 2 )

[node name="sitTimer" type="Timer" parent="."]
wait_time = 0.02

[connection signal="area_entered" from="ball_hurtbox" to="." method="_on_ball_hurtbox_area_entered"]
[connection signal="timeout" from="sitTimer" to="." method="_on_sitTimer_timeout"]
